force-app/main/default/objects/gupshupcrm__Bulk_Messaging_List_View__c/gupshupcrm__Bulk_Messaging_List_View__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting is used for Object List for the Bulk Page on Gupshup WhatsApp Messaging</description>
    <label>Bulk Messaging List View</label>
</CustomObject>