force-app/main/default/objects/gupshupcrm__Bulk_Messaging_List_View__c/fields/gupshupcrm__Active__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>