force-app/main/default/objects/gupshupcrm__Bulk_Messaging_List_View__c/fields/gupshupcrm__Api_Name__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Api_Name__c</fullName>
    <label>Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>