force-app/main/default/objects/gupshupcrm__Bulk_Messaging_List_View__c/fields/gupshupcrm__Object_Label__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Object_Label__c</fullName>
    <label>Object Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>